--- a/packages/ui/src/message-room-view-header/message-room-view-header.module.css
+++ b/packages/ui/src/message-room-view-header/message-room-view-header.module.css
@@ -4,12 +4,13 @@
   background-color: #00b87c;
   color: #fff;
   box-sizing: border-box;
-  padding: 5px 16px;
+  padding: 18px 16px;
   display: flex !important;
   font-size: 10px;
+  height: 72px;
   justify-content: space-between;
   position: fixed;
-  top: 37.5px;
+  top: 44px;
   width: 100%;
   z-index: 1;
 }
